--- a/unity_project/Packages/com.huntergoodin.sceneloader/Runtime/com.huntergoodin.sceneloader.Runtime.asmdef
+++ b/unity_project/Packages/com.huntergoodin.sceneloader/Runtime/com.huntergoodin.sceneloader.Runtime.asmdef
@@ -1,6 +1,6 @@
 {
-	"name": "com.yourcompany.packagename.Runtime",
-	"rootNamespace": "YourCompany.PackageName",
+	"name": "com.huntergoodin.sceneloader.Runtime",
+	"rootNamespace": "HunterGoodin.SceneLoader",
 	"references": [
 	 	"Unity.TextMeshPro"
 	],
