Changing package name, scene set up

--- a/unity_project/Packages/com.huntergoodin.scenebridge/Editor/com.huntergoodin.scenebridge.Editor.asmdef
+++ b/unity_project/Packages/com.huntergoodin.scenebridge/Editor/com.huntergoodin.scenebridge.Editor.asmdef
@@ -1,10 +1,12 @@
 {
-	"name": "com.huntergoodin.sceneloader.Runtime",
-	"rootNamespace": "HunterGoodin.SceneLoader",
+	"name": "com.huntergoodin.scenebridge.Editor",
+	"rootNamespace": "HunterGoodin.SceneBridge",
 	"references": [
-	 	"Unity.TextMeshPro"
+		"com.huntergoodin.scenebridge.Runtime"
 	],
-	"includePlatforms": [],
+	"includePlatforms": [
+		"Editor"
+	],
 	"excludePlatforms": [],
 	"allowUnsafeCode": false,
 	"overrideReferences": false,
