--- a/unity_project/Packages/com.huntergoodin.scenebridge/package.json
+++ b/unity_project/Packages/com.huntergoodin.scenebridge/package.json
@@ -2,23 +2,24 @@
   "name": "com.huntergoodin.scenebridge",
   "version": "0.0.0",
   "displayName": "Scene Bridge",
-  "description": "Asynchronous additive scene loader with transitions, loading screens, and other options.",
-  "documentationUrl": "https://github.com/Persomatey/scene-bridge/blob/main/README.md",
-  "changelogUrl": "https://github.com/Persomatey/scene-bridge/releases",
+  "description": "A simple additive scene loading system with a built-in loading screen workflow and other options.",
+  "documentationUrl": "https://github.com/Persomatey/unity-scene-bridge/blob/main/README.md",
+  "changelogUrl": "https://github.com/Persomatey/unity-scene-bridge/releases",
   "license": "MIT",
-  "licensesUrl": "https://github.com/Persomatey/scene-bridge/blob/main/LICENSE.md",
+  "licensesUrl": "https://github.com/Persomatey/unity-scene-bridge/blob/main/LICENSE.md",
   "unity": "6000.0",
   "author": {
     "name": "Hunter Goodin",
     "url": "https://www.huntergoodin.tech"
   },
   "dependencies": {
-    "com.unity.textmeshpro": "3.0.6"
+    "com.unity.textmeshpro": "3.0.6",
+    "com.unity.render-pipelines.core": "17.0.4"
   },
   "samples": [
     {
-      "displayName": "Example Scene",
-      "description": "Scene displaying the ability to load from one scene to another with all steps in between.",
+      "displayName": "Example Scenes",
+      "description": "Scenes displaying the ability to load from one scene to another with all steps in between. Using temp images from 'jkjkke' on opengameart.com\n\nLoad into ExampleSceneA first since that's where the singleton is loaded.",
       "path": "Samples~/ExampleScene"
     }
   ]
