Forgot most of the relevent last staged files in the last commit

--- a/unity_project/Packages/com.huntergoodin.scenebridge/Runtime/com.huntergoodin.scenebridge.Runtime.asmdef
+++ b/unity_project/Packages/com.huntergoodin.scenebridge/Runtime/com.huntergoodin.scenebridge.Runtime.asmdef
@@ -2,7 +2,8 @@
 	"name": "com.huntergoodin.scenebridge.Runtime",
 	"rootNamespace": "HunterGoodin.SceneBridge",
 	"references": [
-	 	"Unity.TextMeshPro"
+	 	"Unity.TextMeshPro", 
+		"Unity.InputSystem"
 	],
 	"includePlatforms": [],
 	"excludePlatforms": [],
