Added NetCode dependency stuff

--- a/unity_project/Packages/com.huntergoodin.scenebridge/Runtime/com.huntergoodin.scenebridge.Runtime.asmdef
+++ b/unity_project/Packages/com.huntergoodin.scenebridge/Runtime/com.huntergoodin.scenebridge.Runtime.asmdef
@@ -3,7 +3,8 @@
 	"rootNamespace": "HunterGoodin.SceneBridge",
 	"references": [
 	 	"Unity.TextMeshPro", 
-		"Unity.InputSystem"
+		"Unity.InputSystem", 
+		"Unity.Netcode.Runtime"
 	],
 	"includePlatforms": [],
 	"excludePlatforms": [],
